- Removed mydb import in discord_auditor.py - Renamed docker-compose.yml to docker-compose.yaml - Added isDeleted boolean field to Channels table in database_creator.sql - Modified log_path to accept environment variable for log_path - Added functionality for database connection to be opened and closed per call. - Changed server connection status level to debug from info
Signed-off-by: Robert Noe <edain.beor@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ logs/
 attachments/
 .vscode
 config.ini
+dockerfile-testing
+docker-compose-testing.yaml
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
