Added log-volume to volumes
Signed-off-by: Robert Noe <edain.beor@gmail.com>

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -45,5 +45,6 @@ services:
       - log-volume:/var/log/discordauditor
 
 volumes:
-  database-volume:
   attachment-volume:
+  database-volume:
+  log-volume:
