Add build context into docker-compose.yaml

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,6 +27,9 @@ services:
   discord-auditor-bot:
     container_name: discord-auditor-bot
     image: discord-auditor-bot:production
+    build:
+      context: .
+      dockerfile: dockerfile
     environment:
       - user=${user}
       - password=${user_pass}
